--- a/dml-challenge-express/package.json
+++ b/dml-challenge-express/package.json
@@ -19,6 +19,7 @@
     "sqlite3": "^5.0.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
