--- a/dml-challenge-express/package.json
+++ b/dml-challenge-express/package.json
@@ -5,7 +5,8 @@
   "description": "DML code challenge express",
   "scripts": {
     "start": "node ./bin/www",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "test": "jest ./src/server.test.js"
   },
   "author": "",
   "license": "UNLICENSED",
@@ -23,7 +24,9 @@
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
+    "jest": "^26.6.3",
     "morgan": "^1.10.0",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "supertest": "^6.1.3"
   }
 }
